socials alignment fixed

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -4,17 +4,18 @@ footer {
   align-items: center;
 }
 
-.box {
+.social-box {
   justify-content: center;
   align-content: center;
+  display: flex;
 }
 
 .socials {
-  width: 120px;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
+  margin: auto;
 }
 
 .socials a {
